we have a working unbundle project

--- a/src/main.layout.html
+++ b/src/main.layout.html
@@ -16,9 +16,7 @@
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
-    <div class="root">
-
-    </div>
+    <div class="root"><!-- {{content}} --></div>
     <!-- {{scripts}} -->
 
     <!-- {{production-only:start}} -->
