--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
     <div class="root">
       <div class="tree-sitter-page">
         <h2>tree-sitter</h2>
+        <div class="sample-code">
+          <pre></pre>
+        </div>
+        <div class="theme-config"></div>
       </div>
     </div>
     <script type="importmap">
       {
         "imports": {
-          "unbundle": "/web-tree-sitter-preview/node_modules/unbundle/dist/client/index.js",
-          "web-tree-sitter": "/web-tree-sitter-preview/node_modules/web-tree-sitter/tree-sitter.js",
-          "web-tree-sitter/tree-sitter.wasm": "/web-tree-sitter-preview/node_modules/web-tree-sitter/tree-sitter.wasm",
-          "tree-sitter-javascript/tree-sitter-javascript.wasm": "/web-tree-sitter-preview/node_modules/tree-sitter-javascript/tree-sitter-javascript.wasm"
+          "unbundle": "./node_modules/unbundle/dist/client/index.js",
+          "web-tree-sitter": "./node_modules/web-tree-sitter/tree-sitter.js",
+          "web-tree-sitter/tree-sitter.wasm": "./node_modules/web-tree-sitter/tree-sitter.wasm",
+          "tree-sitter-javascript/tree-sitter-javascript.wasm": "./node_modules/tree-sitter-javascript/tree-sitter-javascript.wasm"
         }
       }
     </script>
     <script type="module">
-      import * as pageModule from "/web-tree-sitter-preview/app/home/index.js";
+      import * as pageModule from "/app/home/index.js";
       if (typeof pageModule.ready === "function") {
         document.addEventListener("DOMContentLoaded", pageModule.ready);
       }
