deploy: 8da07d30c69fcf91037d4ae8c367ab0693db03ff

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <script type="importmap">
       {
         "imports": {
-          "unbundle": "./node_modules/unbundle/dist/client/index.js",
-          "web-tree-sitter": "./node_modules/web-tree-sitter/tree-sitter.js",
-          "web-tree-sitter/tree-sitter.wasm": "./node_modules/web-tree-sitter/tree-sitter.wasm",
-          "tree-sitter-javascript/tree-sitter-javascript.wasm": "./node_modules/tree-sitter-javascript/tree-sitter-javascript.wasm"
+          "unbundle": "/web-tree-sitter-preview/node_modules/unbundle/dist/client/index.js",
+          "web-tree-sitter": "/web-tree-sitter-preview/node_modules/web-tree-sitter/tree-sitter.js",
+          "web-tree-sitter/tree-sitter.wasm": "/web-tree-sitter-preview/node_modules/web-tree-sitter/tree-sitter.wasm",
+          "tree-sitter-javascript/tree-sitter-javascript.wasm": "/web-tree-sitter-preview/node_modules/tree-sitter-javascript/tree-sitter-javascript.wasm"
         }
       }
     </script>
     <script type="module">
-      import * as pageModule from "/app/home/index.js";
+      import * as pageModule from "/web-tree-sitter-preview/app/home/index.js";
       if (typeof pageModule.ready === "function") {
         document.addEventListener("DOMContentLoaded", pageModule.ready);
       }
